--- a/web/index.html
+++ b/web/index.html
@@ -385,7 +385,7 @@ wynn.js hawkeye will breakout angular to IRC your logs neatly into place. Painfr
 <p>&copy; 2013 wynn.js | Made with sexy love and heavy breathing by <a href="">PCI Media</a> | <a href="https://twitter.com/WynnJScom">Follow wynn.js on Twitter</a></p>
 </footer>
 
-<a href=""><img class="github-ribbon" src="https://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png" alt="Fork me on GitHub"></a>
+<a href="https://github.com/wynnjs/www.wynnjs.com"><img class="github-ribbon" src="https://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png" alt="Fork me on GitHub"></a>
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
