--- a/web/index.html
+++ b/web/index.html
@@ -380,6 +380,10 @@
 <p>With open source good karma, this bearded beauty will release an Underscore of hipster nodes. No more logstashing issues!<br>
 wynn.js hawkeye will breakout angular to IRC your logs neatly into place. Painfree. </p>
 
+<h3>8. How to I deploy Wynn.js clusters?</h3>
+<p>Tricky question! We 1st looked at puppet, but then chef came along, which was sick until we heard bout salt, which got us all in a knot when somebody mentioned ansible, so we binned it all coz dat dawg was old and *boom* suggest you just use ur awesomeness to magic up ur own configuration management system to deploy it. *Mic Drop* </p>
+
+
 </div>
 <footer>
 <p>&copy; 2013 wynn.js | Made with sexy love and heavy breathing by <a href="">PCI Media</a> | <a href="https://twitter.com/WynnJScom">Follow wynn.js on Twitter</a></p>
